test/corpus/conditions.txt
=====================================
Simple condition
=====================================
function max (n, m) {
    if (n > m){
        return n;
    }
    return m;
}
---
(source_file
      (function_definition
        (identifier)
        (parameter_list
          (identifier)
          (identifier))
        (function_body
          (if_statement
            (binary_expression
              (identifier)
              (identifier))
            (block_statement
              (return_statement
                (identifier))))
          (return_statement
            (identifier)))))
=====================================
Simple condition with else
=====================================
function max (n, m) {
    if (n > m){
        return n;
    }else{
        return m;
    }
}
---
(source_file
      (function_definition
        (identifier)
        (parameter_list
          (identifier)
          (identifier))
        (function_body
          (if_statement
            (binary_expression
              (identifier)
              (identifier))
            (block_statement
              (return_statement
                (identifier)))
            (block_statement
              (return_statement
                (identifier)))))))
