test/corpus/expressions.txt
=====================================
Variable Declaration With Unary Expression
=====================================
template test(){
  var tmp = -1;
  var tmp = ~1;
  var tmp = +1;
  var tmp = !1;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (unary_expression
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (unary_expression
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (unary_expression
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (unary_expression
              (int))))))
=====================================
Variable Declaration With Binary Expression
=====================================
template test(){
  var tmp = 2 + 2;
  var tmp = 2 & 2;
  var tmp = 2 && 2;
  var tmp = 2 | 2;
  var tmp = 2 || 2;
  var tmp = 2 >> 2;
  var tmp = 2 << 2;
  var tmp = 2 ^ 2;
  var tmp = 2 - 2;
  var tmp = 2 * 2;
  var tmp = 2 / 2;
  var tmp = 2 \ 2;
  var tmp = 2 % 2;
  var tmp = 2**2;
  var tmp = 2 < 2;
  var tmp = 2 > 2;
  var tmp = 2 <= 2;
  var tmp = 2 >= 2;
  var tmp = 2 == 2;
  var tmp = 2 != 2;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int)))
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (int)
              (int))))))
=====================================
Variable Declaration With Ternary Expression
=====================================
template test(){
  var tmp = 1 ? 5 > 3 : 0;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (ternary_expression
              (int)
              (binary_expression
                (int)
                (int))
              (int))))))
=====================================
Variable Declaration With Member Expression
=====================================
template qwer(){
  var tmp = qwer.in;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (member_expression
              (identifier)
              (property_identifier))))))
=====================================
Variable Declaration With Array Access Expression
=====================================
template test(){
  var tmp = qwer[0];
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (array_access_expression
              (identifier)
              (int))))))
=====================================
Variable Declaration With Member Array Access Expression
=====================================
template test(){
  var tmp = qwer.in[0];
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (array_access_expression
              (member_expression
                (identifier)
                (property_identifier))
              (int))))))
=====================================
Variable Declaration With Member Double Array Access Expression
=====================================
template test(){
  var tmp = qwer.in[0][N];
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (array_access_expression
              (array_access_expression
                (member_expression
                  (identifier)
                  (property_identifier))
                (int))
              (identifier))))))
=====================================
Variable Declaration With parenthesized Expression
=====================================
template test(){
  var tmp = (2 + 2);
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (parenthesized_expression
              (binary_expression
                (int)
                (int)))))))
=====================================
Variable Declaration With Complex Expression
=====================================
template test(){
  var tmp = ((2 + 2) * t.in + 1 % q.in[0]) << 2;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (parenthesized_expression
                (array_access_expression
                  (member_expression
                    (binary_expression
                      (member_expression
                        (binary_expression
                          (parenthesized_expression
                            (binary_expression
                              (int)
                              (int)))
                          (identifier))
                        (property_identifier))
                      (binary_expression
                        (int)
                        (identifier)))
                    (property_identifier))
                  (int)))
              (int))))))
=====================================
Variable Declaration With Function call Expression
=====================================
template test(){
  var tmp = A();
  var tmp2 = A(1);
  var tmp3 = A(qwe.in, 2 + 10);
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (call_expression
              (identifier)))
          (variable_declaration_statement
            (var)
            (identifier)
            (call_expression
              (identifier)
              (argument_list
                (int))))
          (variable_declaration_statement
            (var)
            (identifier)
            (call_expression
              (identifier)
              (argument_list
                (member_expression
                  (identifier)
                  (property_identifier))
                (binary_expression
                  (int)
                  (int))))))))
=====================================
Signal Assignment
=====================================
template test(){
  signal output out[N];
  signal input in;
  signal input k;
  out[k] <-- (in >> k) & 1;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier)
            (array_definition
              (identifier)))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (expression_statement
            (assignment_expression
              (array_access_expression
                (identifier)
                (identifier))
              (binary_expression
                (parenthesized_expression
                  (binary_expression
                    (identifier)
                    (identifier)))
                (int)))))))
=====================================
Left assignment
=====================================
template test(){
  signal input in;
  signal output out;
  in*out === 0;
}
---
 (source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (expression_statement
            (assignment_expression
              (binary_expression
                (identifier)
                (identifier))
              (int))))))
=====================================
Increments, decrements
=====================================
template test(){
  a++;
  b--;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (expression_statement
            (increment_expression
              (identifier)))
          (expression_statement
            (decrement_expression
              (identifier))))))
=====================================
Complex Expressions with arrays
=====================================
template test(){
  a.in[5]++;
  b.out[2 + n]--;
  rangeChecks[i].in[1] <== end;
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (expression_statement
            (increment_expression
              (array_access_expression
                (member_expression
                  (identifier)
                  (property_identifier))
                (int))))
          (expression_statement
            (decrement_expression
              (array_access_expression
                (member_expression
                  (identifier)
                  (property_identifier))
                (binary_expression
                  (int)
                  (identifier)))))
          (expression_statement
            (assignment_expression
              (array_access_expression
                (member_expression
                  (array_access_expression
                    (identifier)
                    (identifier))
                  (property_identifier))
                (int))
              (identifier))))))
=====================================
Expression with array initialization
=====================================
template FloatAdd(k, p) {
  var case_1_output[2] = [alpha_e, alpha_m];
}
---
(source_file
      (template_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier))
          (parameter
            (identifier)))
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (array_definition
              (int))
            (array
              (identifier)
              (identifier))))))
