test/corpus/loops.txt
=====================================
For loop
=====================================
function f1 (n) {
    for (var i = 0; i < 100; i++){
        i++;
    }
    return n;
}
---
(source_file
      (function_definition
        (identifier)
        (parameter_list
          (identifier))
        (function_body
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (int)))
            (increment_expression
              (identifier))
            (block_statement
              (expression_statement
                (increment_expression
                  (identifier)))))
          (return_statement
            (identifier)))))
=====================================
While loop
=====================================
function f2 (n) {
    while (n > 0){
      n--;
    }
    return n;
}
---
(source_file
      (function_definition
        (identifier)
        (parameter_list
          (identifier))
        (function_body
          (while_statement
            (binary_expression
              (identifier)
              (int))
            (block_statement
              (expression_statement
                (decrement_expression
                  (identifier)))))
          (return_statement
            (identifier)))))
